# pi_rss_publisher

./: .env  Dockerfile  README.md  api.py  docker-compose.yaml  init_db.py  main.py  pyproject.toml
nginx/conf.d/: rss.conf.template  rss.http-only.template  rss.http.conf
nginx/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/0f5be9c16d541ac99c58ae1cb76f4856/: meta.json  private_key.json  regr.json
src/config/: feeds.csv
src/modules/: feeds.py  pgdao.py
src/modules/sql/queries/: feed_data_all_by_run.sql  feed_data_count_by_run.sql  feed_data_upsert.sql  feed_register_update_state.sql  feed_register_upsert.sql  feeds_get_enabled.sql  rss_head_aggregate.sql  rss_key_get.sql  rss_key_insert.sql  rss_key_touch.sql  rss_select_items.sql  runs_finish.sql  runs_start.sql
src/modules/sql/schema/: 000_drop_tables.sql  001_create_table_runs.sql  002_create_table_feed_register.sql  003_create_table_feed_data.sql  010_create_indexes.sql  020_create_table_rss_keys.sql
